--- a/app/src/main/res/layout/game_main.xml
+++ b/app/src/main/res/layout/game_main.xml
@@ -1,175 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout1"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backgnd"
+    android:id="@+id/layout1">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+>
 
-    <TextView
-        android:id="@+id/txtDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="64dp"
-        android:text="Date:"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/date1"
+    <LinearLayout
+        android:id="@+id/lay11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtScoreNormal"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="16dp"
-        android:layout_toEndOf="@+id/txtDate"
-        android:layout_toRightOf="@+id/txtDate"
-        android:text="NA"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="20dp"
+        android:gravity="right"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:id="@+id/textView11"
+            style="@style/titletxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Score: "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <RadioGroup
-        android:id="@+id/radioGroupNormal"
+        <TextView
+            android:id="@+id/scoreNormal"
+            style="@style/titletxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="xxx"
+            android:layout_marginRight="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/lay22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+                android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/cardView2">
+
+
+        <TextView
+            android:id="@+id/textView12"
+            style="@style/titletxt1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date: "
+            android:paddingLeft="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/date1"
+            style="@style/titletxt1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="xxx"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="168dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="7dp">
+        android:layout_marginTop="130dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
-        <RadioButton
-            android:id="@+id/rbNormal1"
+        <LinearLayout
+            android:id="@+id/lay2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="RadioButton"
-            android:textSize="20sp" />
-
-        <RadioButton
-            android:id="@+id/rbNormal2"
+            android:layout_height="match_parent"
+            android:gravity="left"
+            android:paddingLeft="20dp"
+            android:orientation="vertical"
+            android:background="@color/backgnd"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+            <View
             android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#E91E63"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                style="@style/titletxt"
+                android:layout_marginTop="15dp"
+                android:text="Select the correct day!"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <RadioGroup
+                android:id="@+id/radioGroupNormal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+>
+
+                <RadioButton
+                    android:id="@+id/rbNormal1"
+                    android:text="RadioButton"
+                    style="@style/rb"
+                    />
+
+                <RadioButton
+                    android:id="@+id/rbNormal2"
+                    android:text="RadioButton"
+                    style="@style/rb"/>
+
+                <RadioButton
+                    android:id="@+id/rbNormal3"
+                    android:text="RadioButton"
+                    style="@style/rb"/>
+
+                <RadioButton
+                    android:id="@+id/rbNormal4"
+                    android:text="RadioButton"
+                    style="@style/rb"/>
+
+            </RadioGroup>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#E91E63"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2">
+
+        <Button
+            android:id="@+id/btnSubmitNormal1"
+            android:text="Submit"
+            style="@style/CustomButtonStyle" />
+
+        <TextView
+            android:id="@+id/sefsezzz"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="RadioButton"
-            android:textSize="20sp" />
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="10dp"
+            android:text="Timer:"
+            android:textSize="24sp" />
 
-        <RadioButton
-            android:id="@+id/rbNormal3"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/txtTimer"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="RadioButton"
-            android:textSize="20sp" />
-
-        <RadioButton
-            android:id="@+id/rbNormal4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="RadioButton"
-            android:textSize="20sp" />
-
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/txtScoreNormal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="105dp"
-        android:layout_marginRight="105dp"
-        android:text="Score:"
-        android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/scoreNormal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
-        android:text="TextView"
-        android:textColor="#193AEE"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/sefse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/radioGroupNormal"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
-        android:layout_toStartOf="@+id/txtTimer"
-        android:layout_toLeftOf="@+id/txtTimer"
-        android:text="Timer:"
-        android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/txtTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/radioGroupNormal"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginRight="57dp"
-        android:fontFamily="sans-serif-black"
-        android:text="TextView"
-        android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/date1"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="36dp"
-        android:text="Select the correct day!"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/btnSubmitNormal1"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/radioGroupNormal"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginLeft="27dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
-        android:layout_marginBottom="42dp"
-        android:layout_toStartOf="@+id/sefse"
-        android:layout_toLeftOf="@+id/sefse"
-        android:background="#737070"
-        android:text="Submit"
-        android:textColor="#090000"
-        android:textSize="14sp"
-        app:backgroundTint="#827E7E" />
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:fontFamily="sans-serif-black"
+            android:text="TextView"
+            android:textSize="24sp" />
 
 
-</RelativeLayout>
+
+
+
+    </LinearLayout>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
